rename url and add param at income swagger
